<resources>
    <string name="app_name">DIWINE</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navbar_title_slovnik"><font color = "#B6B6B6">Vinařský slovník</font></string>
    <string name="navbar_title_kruhy"><font color = "#B6B6B6">Aromatické kruhy</font></string>
    <string name="popisek_navigacni_menu">Pokud jste našli chybu, nebo máte nějaké dotazy, pište na email: diwineshop@email.cz.</string>
    <string name="barva_palava">Zlatavě žlutá, ve větší vyzrálosti jantarová / medová až hrozinková s meruňkovými odlesky.</string>
    <string name="vune_palava">Převážně nese tóny jednoho z kříženců - Tramínu červeného. Aromatická, ovocná, s medově kořenitou dezertností a přezrálými tóny hrozinek, meruněk a broskví. Květinová, s převahou muškátu,
        někdy i vanilky. Tóny čajové růže, manga a banánu (exotického ovoce).</string>
    <string name="stolovani_palava">Hodí se ke kořenitému jídlu či sladké úpravě masa. Také k uzeným a pařeným sýrům a dezertům.</string>
    <string name="chut_palava">Plná, dlouhotrvající, kořenitá, elegantní, harmonická, s vyšší kyselinou a často podpořená vyšším obsahem cukru. Ovocná, s přezrálými tóny hrozinek, meruněk a broskví.</string>
    <string name="popis_palava">Pálava je bílá moštová odrůda vzniklá křížením odrůd Tramín červený x Müller Thurgau. Asi nejlepších výsledků dosahuje především v Mikulovské podoblasti, v okolí obcí Perná,
        Pavlov nebo Bulhary, dále pak v Lechovicích, Popicích nebo Čejkovicích. Pálava je často automaticky vnímána jako víno sladké, tedy s vyšším zbytkovým cukrem, ale zdaleka to není pravidlo.
        Právě v suché verzi objevíme kouzlo a krásu téhle odrůdy.Do Státní odrůdové knihy zapsaná v r. 1977. Vyšlechtěná Ing. Josefem Veverkou ve
        Šlechtitelské stanici Velké Pavlovice a Perné. \n\n
         Hrozen je středně velký, kónický s menšími křídly, bobule malá, šedočervená, tuhá odolná slupka, intenzívní tramínové chuti. Zralost na přelomu září – října. Víno je kořenité, velmi podobné vínu Tramín
        červený s mírnými tóny jiných aromatických odrůd např. Irsai Oliver příp. muškátových odrůd. \n\n
        Zkratka: Pa \n\n
        Držitel šlechtitelských práv v ČR: není.\n
        Udržovatel odrůdy v ČR: kód 603 Šlechtitelská stanice vinařská Velké Pavlovice, a.s. 691 06 Velké Pavlovice 565, kód 604 Ing. Miloš Michlovský, CSc. Družstevní 818, 691 03 Rakvice, kód 749 Ing.
        Alois Tománek 687 09 Boršice 671, kód 982 AMPELOS, ŠLECHTITELSKÁ STANICE VINAŘSKÁ ZNOJMO, a.s. 671 24 Vrbovec 274. \n\n
    Zdroje informací: \n www.znalecvin.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015</string>
       <string name="vune_acolon">Třešně / Višně, borůvky, lesní ostružiny, čokoláda a kořenitost. Ve vůni najdeme i jemný nádech švestek, která se obecně připisuje jednomu z kříženců - Dornfelderu.</string>
       <string name="chut_acolon">Převážně červené ovoce. Víno s dobrou texturou a plným tělem.</string>
       <string name="barva_acolon">Velmi tmavá</string>
       <string name="popis_acolon">Acolon je modrá moštová odrůda, zapsaná v r. 2011 do Státní odrůdové knihy ČR. Vyšlechtěná v r. 1971 ve Státním výukovém a výzkumném ústavu pro vinohradnictví a ovocnictví ve
           Weinsbergu (SRN), křížením odrůd Frankovka x Dornfelder, šlechtitel Bernd Hill. Hrozen je střední až velký, středně hustý až hustý, bobule středně velká, oválná, modročerná, dužina je zabarvena do
           světlejší červené barvy. Víno je frankovkového typu, má vyšší barevné odstíny, ve vůni je typické červené ovoce, v chuti výrazná, ale jemná sametová tříslovina.
           Odrůdová vína mívají vyšší obsah zbytkových cukrů, než vína z rodičovských odrůd. Mají ještě intenzivnější barevnost, jsou plná, jemně ovocitá a harmonická,
           s dobrou strukturou a s decentní tříslovinou, dobře vyzrávají a jsou vhodná i k barikové úpravě. Bezcukerný extrakt vín v dlouhodobém průměru je vysoký, 25,8 g/l.\n\n
       Zkratka: Ac \n\n
   Držitel šlechtitelských práv ČR: není \n
   Udržovatel odrůdy v ČR: kód 1160 VERITAS spol. s r.o., Vrchní 7, 683 54 Bošovice \n\n
       Zdroje informací: \n www.znalecvin.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
       </string>
    <string name="vune_agni">Muškátová a jemně ovocná, doplněná květinovými tóny.</string>
    <string name="chut_agni">Plná, příjemná, s jemnou tříslovinou. Ve vůni a chuti můžeme hledat muškát a exotické tóny.</string>
    <string name="barva_agni">Intenzivní, tmavočervená, nadprůměrně sytá.</string>
    <string name="stolovani_agni">Vína se podávají k dezertům a k sýrům se zelenou plísní, rozhodně jsou zajímavá též samostatně, jako specifický typ červených muškátových vín.</string>
    <string name="popis_agni">Agni je modrá aromatická moštová odrůda vzniklá křížením odrůd André x Irsai Oliver. V r. 2001 zapsaná do Státní odrůdové knihy ČR. Vyšlechtěna ve ŠS V. Pavlovice a ŠS Perná kolektivem šlechtitelů:
Jan Havlík, Ing. Ludvík Michlovský, Ing. František Zatloukal. Je bujného růstu, středně hustého olistění a má malé až střední hrozny s malými bobulemi modročerné barvy s výrazným muškátovým aromatem.
Odolnost proti houbovým chorobám je střední. Její pěstitelské nároky zatím nejsou plně odzkoušeny.Hrozny dosahují vysoké cukernatosti a zrají brzy. Víno je plné, zvláštního, pro červená vína nezvyklého
 typu s výrazným muškátovým aromatem. Mohlo by se asi uplatnit při výrobě vín dezertních. Odrůdová vína nejsou příliš vhodná k archivaci. \n\n
Zkratka Ag.\n\n
udržovatel odrůdy: 604, Doc. Ing. Miloš Michlovský, CSc, Družstevní 818, 691 03 Rakvice. Držitel šlechtitelských práv: Doc. Ing. Miloš Michlovský, CSc.\n\n
       Zdroje informací: \n www.znalecvin.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
       </string>
    <string name="vune_alibernet">Po jednom z kříženců - Cabernetu. Ve vůni můžeme dále hledat černý rybíz, lesní ovoce, ostružiny, vanilku, či čokoládu.</string>
    <string name="chut_alibernet">Středně plná až plná, drsnější - při horších ročnících s vyšší tříslovinou a kyselinkou. Borůvky, čokoláda, ostružiny, lesní ovoce.</string>
    <string name="barva_alibernet">Intenzivní červená.</string>
    <string name="stolovani_alibernet">Hodí se ke spárkaté zvěřině  a skopovému masu, hovězímu guláši a měkkým sýrům s bílou plísní. </string>
    <string name="stolovani_erilon"></string>
    <string name="barva_florianka">Zlatavá se zelenými odlesky.</string>
    <string name="vune_florianka">Jemně aromatická. Zralé bílé hrozny, jablko a med. U vyzrálejších vín či vyšších přívlastků se k medovým tónům přidávají i banány a žlutý meloun.</string>
    <string name="chut_florianka">Příjemně plná, ovocná, svěží, s delší dochutí.</string>
    <string name="popis_florianka">Florianka je bílá interspecifická moštová odrůda révy vinné vzniklá křížením Müller Thurgau x Veltlínské červené rané. Vyšlechtěna ve Šlechtitelské stanici
        vinařské Polešovice kolektivem šlechtitelů pod vedením Ing. Václava Křivánka. Do Státní odrůdové knihy ČR zapsaná v roce 2010. Hrozen je malý až středně velký, středně hustý.
        Bobule malá kulatá, žlutozelené barvy. Odrůda dosahuje zralosti ve druhé polovině září, později dochází k sesychání bobulí. Víno je ovocné vůně i chuti, jemně aromatické,
        při vyšší cukernatosti hroznů medové tóny ve vůni i chuti.\n\n
        Doporučená zkratka: Fl\n\n
        Udržovatel odrůdy v ČR: Radim Masařík, Hradební 1250, 686 01 Uherské Hradiště.\n
        Držitel šlechtitelských práv v ČR: není.\n\n
       Zdroje informací: \n www.znalecvin.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
       </string>
    <string name="barva_thurgau">Světlá se zelenožlutým odstínem.</string>
    <string name="vune_thurgau">Bez, grep, broskve, lehce muškát.</string>
    <string name="chut_thurgau">Harmonická, svěží. Při dobré zralosti hroznů dostáváme broskve, meruňky a někdy dle ročníku i sauvignonové tóny. </string>
    <string name="stolovani_thurgau">Vína odrůdy MT jsou vína ke každodennímu pití k prosté stravě a při společenské zábavě. Hodí se k předkrmům, zeleninovým polévkám, k rybě nebo k bílým měkkým sýrům.
        Vyzrálé hrozny MT jsou vhodné i k přímé konzumaci, jsou příjemné, jemně muškátové chut.\n
    Teplota podávání: 9-11°C</string>
    <string name="popis_thurgau">Müller Thurgau je bílá moštová odrůda vzniklá křížením Ryzlinku rýnského x Madlenky královské. Odrůdu vyšlechtil Dr. Hermann Müller (1850-1924),  ve šlechtitelské
        stanici Geisenheim v r. 1882. Švýcar Müller pocházel z kantonu Thurgau a spojení příjmení s názvem kantonu dalo jméno odrůdě, která z evropských vinic prakticky vytlačila odrůdy jako je
        Sylvánské zelené či Neuburské. MT se z úspěchem pěstuje i v Novém světě (např. Nový Zéland, USA). Protože odrůda dozrává většinou již v polovině září daří se jí nejvíce v chladnějších
        vinařských oblastech. V některých evropských státech se objevuje v názvu Sylvánské, protože se H. Müller domníval, že kříží Ryzlink rýnský x Sylvánské zelené.  Odrůda Müller Thurgau je
        nejznámnější a nejrozšířenější kříženec révy vinné na světě. V ČR se pěstuje na 9,4% ploch, viz. též výměra vinic ČR.\n
        Do Státní odrůdové knihy ČR byla odrůda zapsaná v r. 1941.\n
        Hrozen je středně velký až velký, válcovitého tvaru, bobule střední, kulatá, zelenožluté barvy. Dužnina je řídká s jemnou muškátovou chutí. Víno je příjemné s nižšími kyselinami, muškátové
        aroma vždy v pozadí. Při redukci výnosu a dosáhnutí vyšší cukernatosti, např. u pozdního sběru je víno kvalitou plně srovnatelné s ostatními odrůdami.\n
        Povolené synonymum: Rivaner\n\n
        Zkratka: MT\n\n
        Držitel šlechtitelských práv v ČR: není\n
        Udržovatel v ČR: 603 Šlechtitelská stanice vinařská Velké Pavlovice, a.s. 691 06 Velké Pavlovice 565, 605 Šlechtitelská stanice vinařská, s.r.o. 687 37 Polešovice, 629 VÚRV Praha-Ruzyně,
        Výzkumná stanice vinařská 267 18 Karlštejn 98, 749 Ing. Alois Tománek 687 09 Boršice 671, 982 AMPELOS, ŠLECHTITELSKÁ STANICE VINAŘSKÁ ZNOJMO, a.s. 671 24 Vrbovec 274.\n\n
        Zdroje informací: \n www.znalecvin.cz, www.vinoadestilaty.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
    </string>
</resources>