<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:background="@drawable/background">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FloriankaActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cormorant"
            android:text="FLORIANKA (Fl)"
            android:textColor="#B6B6B6"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/hrozen"
            android:layout_width="150dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/florianka" />

        <ImageView
            android:id="@+id/icon_zrak"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrozen"
            app:srcCompat="@drawable/lista_barva_bile"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/icon_chut"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popis_cich"
            app:srcCompat="@drawable/lista_chut_bile"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/icon_stolovani"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popis_chut"
            app:srcCompat="@drawable/lista_stolovani_bile"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/popis_stolovani"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingLeft="10dp"
            android:text="@string/stolovani_erilon"
            android:textColor="#B6B6B6"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />

        <ImageView
            android:id="@+id/icon_cich"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
            app:srcCompat="@drawable/lista_vune_bile"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="5dp"
            android:text="DOPLŇUJÍCÍ INFORMACE"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#B6B6B6"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popis_stolovani" />

        <TextView
            android:id="@+id/obecny_popis_florianka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="5sp"
            android:text="@string/popis_florianka"
            android:textColor="#B6B6B6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_heading" />

        <TextView
            android:id="@+id/popis_cich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingLeft="10dp"
            android:text="@string/vune_florianka"
            android:textColor="#B6B6B6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_cich"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/popis_zrak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingLeft="10dp"
            android:text="@string/barva_florianka"
            android:textColor="#B6B6B6"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/popis_chut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingLeft="10dp"
            android:text="@string/chut_florianka"
            android:textColor="#B6B6B6"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/icon_chut" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


